--- a/cinf/call-for-paper.html
+++ b/cinf/call-for-paper.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <title>
-      Downloads- International Conference on Circular Economy &amp; Sustainable
-      Development
-    </title>
+    <title>SCMAI - 2025 Conference</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -61,7 +58,7 @@
               </button>
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" href="index.html">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -92,7 +89,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="call-for-paper.html"
+                  <a class="nav-link active" href="call-for-paper.html"
                     >Call For Papers</a
                   >
                 </li>
@@ -153,34 +150,62 @@
     <div class="page-content">
       <section class="inner_banner">
         <div class="banner_title text-center">
-          <h1>Downloads</h1>
+          <h1>ANNOUNCEMENT</h1>
         </div>
       </section>
-      <section class="download_sec py_3">
+      <section class="call_for_paper py_3">
         <div class="container-xxl">
-          <div class="row downlaod_list justify-content-center">
-            <div class="col-12 col-md-4 download_item">
-              <div class="item_inner text-center">
-                <a href="pdf/Review Policy.pdf" target="_blank"
-                  ><i class="fa-regular fa-file-pdf"></i
-                ></a>
-                <h2 class="h4">REVIEW POLICY</h2>
+          <div class="row">
+            <div class="col-md-9 col-lg-8">
+              <div class="sec_title text_justify">
+                <h2 class="text_red">Call for Papers</h2>
+                <p>
+                  Faculty members/research scholars, and industry experts in the
+                  fields of engineering and technology are invited to submit
+                  original research Within the conference, research papers
+                  should present new perspectives. All participants need to
+                  register prior to attending the conference. For guidelines and
+                  further queries email at - ad1.cse@cumail.in
+                </p>
+                <!-- <div class="table-responsive">
+                        <table class="table w-100">
+                            <thead>
+                                <tr>
+                                    <th>Delegates</th>
+                                    <th>Registration Fee</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Research Scholars / Academicians  </td>
+                                    <th>7000 (INR)</th>
+                                </tr>
+                                <tr>
+                                    <td>Corporate/ Industry </td>
+                                    <th>10,000 (INR)</th>
+                                </tr>
+                                <tr>
+                                    <td>Foreign Delegates </td>
+                                    <th>$ 150</th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div> -->
               </div>
             </div>
-            <div class="col-12 col-md-4 download_item">
-              <div class="item_inner text-center">
-                <a href="pdf/Plagiarism Policy.pdf" target="_blank"
-                  ><i class="fa-regular fa-file-pdf"></i
-                ></a>
-                <h2 class="h4">PLAGIARISM POLICY</h2>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 download_item">
-              <div class="item_inner text-center">
-                <a href="pdf/Single-Page-Flyer.pdf" target="_blank"
-                  ><i class="fa-regular fa-file-pdf"></i
-                ></a>
-                <h2 class="h4">SINGLE PAGE FLYER</h2>
+            <div class="col-md-4 col-lg-3 ms-auto">
+              <div class="submission_link">
+                <div class="link_btn">
+                  <a href="" class="button yellow_btn">Paper Submission</a>
+                </div>
+                <div class="link_btn">
+                  <a href="" class="button yellow_btn">Author Agreement form</a>
+                </div>
+                <div class="link_btn">
+                  <a href="paper-template.html" class="button yellow_btn"
+                    >Paper Template</a
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -226,13 +251,11 @@
                   </li>
                   <li><a href="call-for-paper.html"> Call for papers</a></li>
                   <li>
-                    <a href="organizing-commitee.html">Organizing Committe</a>
+                    <a href="organizing-commitee.html">Organizing Committee</a>
                   </li>
                   <li><a href="contact.html"> Contact</a></li>
                   <li><a href="registration.html"> Registration</a></li>
-                  <li><a href="aaies.html"> AAIES-2024</a></li>
                   <li><a href="download.html"> Downloads</a></li>
-                  <li><a href="review-policy.html"> Review Policy</a></li>
                 </ul>
               </div>
             </div>
