--- a/cinf/download.html
+++ b/cinf/download.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <title>
-      Conference Images- 3rd International Conference on Recent Advancements in
-      Communication, Computing and Artificial Intelligence (RACCAI-2025)
-    </title>
+    <title>SCMAI - 2025 Conference</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -24,17 +21,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="css/jquery.fancybox-buttons.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="css/jquery.fancybox-thumbs.css"
-    />
-    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -72,7 +58,7 @@
               </button>
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -164,196 +150,34 @@
     <div class="page-content">
       <section class="inner_banner">
         <div class="banner_title text-center">
-          <h1>CONFERENCE</h1>
+          <h1>Downloads</h1>
         </div>
       </section>
-      <section class="conference_sec py_3">
+      <section class="download_sec py_3">
         <div class="container-xxl">
-          <div class="sec_title">
-            <h2 class="text_red">TAKE A CONFERENCE TOUR</h2>
-            <p>CONFERENCE-IMAGES</p>
-            <div class="row gallery_list">
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/1.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/1.jpeg"
-                    alt="#"
-                  />
-                </a>
+          <div class="row downlaod_list justify-content-center">
+            <div class="col-12 col-md-4 download_item">
+              <div class="item_inner text-center">
+                <a href="pdf/Review Policy.pdf" target="_blank"
+                  ><i class="fa-regular fa-file-pdf"></i
+                ></a>
+                <h2 class="h4">REVIEW POLICY</h2>
               </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/2.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/2.jpeg"
-                    alt="#"
-                  />
-                </a>
+            </div>
+            <div class="col-12 col-md-4 download_item">
+              <div class="item_inner text-center">
+                <a href="pdf/Plagiarism Policy.pdf" target="_blank"
+                  ><i class="fa-regular fa-file-pdf"></i
+                ></a>
+                <h2 class="h4">PLAGIARISM POLICY</h2>
               </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/3.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/3.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/4.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/4.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/5.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/5.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/6.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/6.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/7.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/7.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/8.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/8.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/9.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/9.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/10.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/10.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/11.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/11.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/12.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/12.jpeg"
-                    alt="#"
-                  />
-                </a>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
-                <a
-                  href="images/conference/13.jpeg"
-                  data-fancybox="tabGallery1"
-                  class="fancybox"
-                  rel="group"
-                >
-                  <img
-                    class="gallerie_shw"
-                    src="images/conference/13.jpeg"
-                    alt="#"
-                  />
-                </a>
+            </div>
+            <div class="col-12 col-md-4 download_item">
+              <div class="item_inner text-center">
+                <a href="pdf/Single-Page-Flyer.pdf" target="_blank"
+                  ><i class="fa-regular fa-file-pdf"></i
+                ></a>
+                <h2 class="h4">SINGLE PAGE FLYER</h2>
               </div>
             </div>
           </div>
@@ -399,11 +223,13 @@
                   </li>
                   <li><a href="call-for-paper.html"> Call for papers</a></li>
                   <li>
-                    <a href="organizing-commitee.html">Organizing Committee</a>
+                    <a href="organizing-commitee.html">Organizing Committe</a>
                   </li>
                   <li><a href="contact.html"> Contact</a></li>
                   <li><a href="registration.html"> Registration</a></li>
+                  <li><a href="aaies.html"> AAIES-2024</a></li>
                   <li><a href="download.html"> Downloads</a></li>
+                  <li><a href="review-policy.html"> Review Policy</a></li>
                 </ul>
               </div>
             </div>
@@ -429,17 +255,11 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script src="js/aos.js" defer></script>
-    <script src="js/jquery.fancybox-media.js"></script>
-    <script src="js/jquery.fancybox-thumbs.js"></script>
-    <script src="js/jquery.fancybox.pack.js"></script>
     <script src="js/custom.js"></script>
     <script>
       $(function () {
         AOS.init({ disable: false });
       });
-    </script>
-    <script>
-      jQuery('a[data-fancybox="tabGallery1"]').fancybox();
     </script>
   </body>
 </html>
