--- a/cinf/speakers.html
+++ b/cinf/speakers.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <title>
-      Organizing Committee- International Conference on recent Advancements in
-      Communication, Computing and Artificial Intelligence (RACCAI-2025)
-    </title>
+    <title>SCMAI - 2025 Conference</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
