--- a/cinf/conference-images.html
+++ b/cinf/conference-images.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <title>
-      Registration- International Conference on: Recent Advancements in
-      Communication, Computing and Artificial Intelligence (RACCAI-2025)
-    </title>
+    <title>SCMAI - 2025 Conference</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -24,6 +21,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/jquery.fancybox-buttons.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/jquery.fancybox-thumbs.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -130,9 +138,7 @@
                   <a class="nav-link" href="speakers.html">Speakers</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="registration.html"
-                    >Registration</a
-                  >
+                  <a class="nav-link" href="registration.html">Registration</a>
                 </li>
                 <li class="nav-item">
                   <a
@@ -155,20 +161,199 @@
     <div class="page-content">
       <section class="inner_banner">
         <div class="banner_title text-center">
-          <h1>REGISTRATION</h1>
+          <h1>CONFERENCE</h1>
         </div>
       </section>
-      <section class="registeration_fee py_3">
+      <section class="conference_sec py_3">
         <div class="container-xxl">
-          <div
-            class="sec_title text-center"
-            data-aos="fade-up"
-            data-aos-easing="linear"
-            data-aos-duration="1500"
-          >
-            <h2 class="text_red">REGISTRATION FEE</h2>
+          <div class="sec_title">
+            <h2 class="text_red">TAKE A CONFERENCE TOUR</h2>
+            <p>CONFERENCE-IMAGES</p>
+            <div class="row gallery_list">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/1.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/1.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/2.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/2.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/3.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/3.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/4.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/4.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/5.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/5.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/6.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/6.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/7.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/7.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/8.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/8.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/9.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/9.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/10.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/10.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/11.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/11.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/12.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/12.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+              <div class="col-6 col-sm-6 col-md-4 col-lg-3 galery_item">
+                <a
+                  href="images/conference/13.jpeg"
+                  data-fancybox="tabGallery1"
+                  class="fancybox"
+                  rel="group"
+                >
+                  <img
+                    class="gallerie_shw"
+                    src="images/conference/13.jpeg"
+                    alt="#"
+                  />
+                </a>
+              </div>
+            </div>
           </div>
-          <img src="/main/images/table.jpg" alt="" style="margin-left: 7%" />
         </div>
       </section>
     </div>
@@ -190,15 +375,14 @@
                   />
                 </a>
                 <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
+                  ><i class="fa fa-envelope"> </i>icaaies@cgc.ac.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>97819-26200</a
+                  ><i class="fa fa-phone"> </i>9056710731</a
                 >
                 <a
-                  ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
-                  Chandigarh-Ludhiana Highway, Gharuan, Mohali, Punjab
-                  (India)</a
+                  ><i class="fa fa-globe"> </i>State Highway 12A Jhanjeri,
+                  Sahibzada Ajit Singh Nagar, Punjab 140307</a
                 >
               </div>
             </div>
@@ -206,7 +390,7 @@
               <div class="ftr_qlink">
                 <h3>Quick Links</h3>
                 <ul class="m-0 list-unstyled">
-                  <li><a href="about-cgc.html"> About CU</a></li>
+                  <li><a href="about-cgc.html"> About CGC</a></li>
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
@@ -222,7 +406,7 @@
             </div>
             <div class="col-12 col-md-4">
               <div class="ftr_map">
-                <h3>Find CU</h3>
+                <h3>Find CGC Jhanjeri</h3>
                 <img src="images/map.png" />
               </div>
             </div>
@@ -231,21 +415,28 @@
         <div class="footer_bottom">
           <div class="container-xxl">
             <div class="copyrgt">
-              Copyright © 2024 Chandigarh University Mohali
+              Copyright © 2024 Chandigarh Group of Colleges Jhanjeri
             </div>
           </div>
         </div>
       </div>
     </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script src="js/aos.js" defer></script>
+    <script src="js/jquery.fancybox-media.js"></script>
+    <script src="js/jquery.fancybox-thumbs.js"></script>
+    <script src="js/jquery.fancybox.pack.js"></script>
     <script src="js/custom.js"></script>
     <script>
       $(function () {
         AOS.init({ disable: false });
       });
+    </script>
+    <script>
+      jQuery('a[data-fancybox="tabGallery1"]').fancybox();
     </script>
   </body>
 </html>
