--- a/cinf/national-advisors.html
+++ b/cinf/national-advisors.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <title>
-      Organizing Committee- International Conference on recent Advancements in
-      Communication, Computing and Artificial Intelligence (RACCAI-2025)
-    </title>
+    <title>SCMAI - 2025 Conference</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -153,7 +150,7 @@
     <div class="page-content">
       <section class="inner_banner">
         <div class="banner_title text-center">
-          <h1>International Advisors</h1>
+          <h1>National Advisors</h1>
         </div>
       </section>
       <section class="comitee_sec py_3">
@@ -162,7 +159,7 @@
             <table>
               <thead>
                 <tr>
-                  <th>S. No.</th>
+                  <th>S.No.</th>
                   <th>Name</th>
                   <th>Designation</th>
                 </tr>
@@ -170,209 +167,162 @@
               <tbody>
                 <tr>
                   <td>1.</td>
-                  <td>D. R. Bogdanova</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. Rajeev Ahuja</td>
+                  <td>Director - IIT Ropar</td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>2.</td>
-                  <td>Nazilya Rakhimova</td>
-                  <td>ASOIU, Baku, Azerbaijan</td>
+                  <td>Dr. Pushpendra Singh</td>
+                  <td>Professor - IIT Ropar</td>
                 </tr>
                 <tr>
                   <td>3.</td>
-                  <td>G. R. Shakhmametova</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. J S Shambi</td>
+                  <td>Professor-IIT Ropar</td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>4.</td>
-                  <td>R. A. Aliyev</td>
-                  <td>Corresponding Member of ANAS, Baku, Azerbaijan</td>
+                  <td>Dr. P.C Tewari</td>
+                  <td>Professor - NIT Kurukshetra, Haryana</td>
                 </tr>
                 <tr>
                   <td>5.</td>
-                  <td>V. V. Antonov</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. Dinesh Khanduja</td>
+                  <td>Professor - NIT Kurukshetra, Haryana</td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>6.</td>
-                  <td>P. Bolodurina</td>
-                  <td>OSU, Orenburg, Russia</td>
+                  <td>Dr. Shyam Sundar Pattnaik</td>
+                  <td>Director - NITTTR Chandigarh</td>
                 </tr>
                 <tr>
                   <td>7.</td>
-                  <td>V. I. Vasiliev</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. P. Chakarvarti</td>
+                  <td>Director, IIEST, Sidhpur, West Bengal</td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>8.</td>
-                  <td>V. E. Wolfenhagen</td>
-                  <td>YurInfoR-MSU, Moscow, Russia</td>
+                  <td>Dr. Rajesh Bhatia</td>
+                  <td>Professor - PEC University of Technology, Chandigarh</td>
                 </tr>
                 <tr>
                   <td>9.</td>
-                  <td>L. A. Gardashova</td>
-                  <td>Azerbaijan</td>
+                  <td>Dr. Alpana Agarwal</td>
+                  <td>
+                    Professor - Thapar Institute of Engineering &amp;
+                    Technology, Patiala
+                  </td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>10.</td>
-                  <td>V. E. Gvozdev</td>
+                  <td>Dr. Anil Kumar Verma</td>
                   <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
+                    Professor - Thapar Institute of Engineering &amp;
+                    Technology, Patiala
                   </td>
                 </tr>
                 <tr>
                   <td>11.</td>
-                  <td>V. V. Gribova</td>
-                  <td>IAPU FEB RAS Vladivostok, Russia</td>
+                  <td>Dr. Kulbir Singh</td>
+                  <td>
+                    Associate Professor - Thapar Institute of Engineering &amp;
+                    Technology, Patiala
+                  </td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>12.</td>
-                  <td>Jaspreet Singh Bath</td>
-                  <td>CHU, Chandigarh, India</td>
+                  <td>Dr. B.K Kaushik</td>
+                  <td>Professor, IIT Rookee, India</td>
                 </tr>
                 <tr>
                   <td>13.</td>
-                  <td>Oksana Igorevna Elkhova</td>
+                  <td>Dr. Manpreet Manna</td>
                   <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
+                    Associate Professor - Sant Longowal Institute of Engineering
+                    &amp; Technology, Punjab
                   </td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>14.</td>
-                  <td>L. Ermolov</td>
+                  <td>Dr. Sanjay Marwaha</td>
                   <td>
-                    A. Yu. Ishlinsky Institute for Problems in Mechanics of the
-                    Russian Academy of Sciences (IPMech RAS) Moscow, Russia
+                    Professor - Sant Longowal Institute of Engineering &amp;
+                    Technology, Punjab
                   </td>
                 </tr>
                 <tr>
                   <td>15.</td>
-                  <td>P. Zhuk</td>
-                  <td>North Caucasus Federal University, Russia</td>
+                  <td>Dr. Anupma Marwaha</td>
+                  <td>
+                    Professor - Sant Longowal Institute of Engineering &amp;
+                    Technology, Punjab
+                  </td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>16.</td>
-                  <td>S. Karunas</td>
-                  <td>IBG UC RAS, Ufa, Russia</td>
+                  <td>Dr. Ajat Shatru Arora</td>
+                  <td>
+                    Professor - Sant Longowal Institute of Engineering &amp;
+                    Technology, Punjab
+                  </td>
                 </tr>
                 <tr>
                   <td>17.</td>
-                  <td>V. M. Kartak</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. Y. R. Sood</td>
+                  <td>Professor and Head, EED, NIT Hamirpur</td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>18.</td>
-                  <td>O. A. Krivosheeva</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. Manoj Duhan</td>
+                  <td>Professor, DCRUS&amp;T, Murthal</td>
                 </tr>
                 <tr>
                   <td>19.</td>
-                  <td>J. F. Mamedov</td>
-                  <td>Sumgait State University, Sumgait, Azerbaijan</td>
+                  <td>Dr. Aditya Goel</td>
+                  <td>Professor, MANIT Bhopal</td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>20.</td>
-                  <td>V. Melnikov</td>
-                  <td>URIIT (UNIIIT, Khanty-Mansiysk), Russia</td>
+                  <td>Dr. I N Kar</td>
+                  <td>Professor, EED, IIT Delhi</td>
                 </tr>
                 <tr>
                   <td>21.</td>
-                  <td>Valery Viktorovich Mironov</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. Raj Singh</td>
+                  <td>Sr. Scientist, CEERI Pliani</td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>22.</td>
-                  <td>K. V. Mironov</td>
-                  <td>(TU Vienna), MIPT, Moscow, Russia</td>
+                  <td>Dr. Pawan</td>
+                  <td>Professor, Electrical Engg. Deptt., IIT Guwahati</td>
                 </tr>
                 <tr>
                   <td>23.</td>
-                  <td>E. A. Muravyova</td>
-                  <td>
-                    Branch of Ufa State Petroleum Technological University in
-                    Sterlitamak, Russia
-                  </td>
+                  <td>Dr. Ashwani Kumar</td>
+                  <td>Professor, NIT- Kurukshetra</td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>24.</td>
-                  <td>S. A. Mustafina</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. K.S. Sandhu</td>
+                  <td>Professor, NIT-Kurukshetra</td>
                 </tr>
                 <tr>
                   <td>25.</td>
-                  <td>V. I. Petrenko</td>
+                  <td>Prof. Prerna Gaur</td>
                   <td>
-                    Federal State Autonomous Educational Institution of Higher
-                    Education "North Caucasus Federal University", Russia
+                    Professor, Netaji Shubhash Institute of Technology (NSIT),
+                    Delhi
                   </td>
                 </tr>
                 <tr style="background-color: #f2f2f2">
                   <td>26.</td>
-                  <td>O. N. Smetanina</td>
-                  <td>
-                    Federal State Budgetary Educational Institution of Higher
-                    Education "Ufa University of Science and Technology", Russia
-                  </td>
+                  <td>Dr. Lilly Dewan</td>
+                  <td>Professor, NIT Kurukshetra</td>
                 </tr>
                 <tr>
-                  <td>27.</td>
-                  <td>Sun Xiaoyu</td>
-                  <td>Shenyang Institute of Engineering, China</td>
-                </tr>
-                <tr style="background-color: #f2f2f2">
-                  <td>28.</td>
-                  <td>F. B. Tebueva</td>
-                  <td>
-                    North Caucasus Federal University (NCFU, Stavropol), Russia
-                  </td>
-                </tr>
-                <tr>
-                  <td>29.</td>
-                  <td>Tranos Zuva</td>
-                  <td>Vaal University of Technology, South Africa</td>
-                </tr>
-                <tr style="background-color: #f2f2f2">
-                  <td>30.</td>
-                  <td>V. Tyurin</td>
-                  <td>BSMU, Ufa, Russia</td>
-                </tr>
-                <tr>
-                  <td>31.</td>
-                  <td>F. Chipiga</td>
-                  <td>
-                    North Caucasian Federal University (NCFU, Stavropol), Russia
-                  </td>
-                </tr>
-                <tr style="background-color: #f2f2f2">
-                  <td>32.</td>
-                  <td>N. M. Sherykhalina</td>
-                  <td>UUNIT, Ufa, Russia</td>
+                  <td>26.</td>
+                  <td>Dr. S.S. Gill</td>
+                  <td>Professor, GNDEC, Ludhiana</td>
                 </tr>
               </tbody>
             </table>
@@ -398,15 +348,14 @@
                   />
                 </a>
                 <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
+                  ><i class="fa fa-envelope"> </i>icaaies@cgc.ac.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>97819-26200</a
+                  ><i class="fa fa-phone"> </i>9056710731</a
                 >
                 <a
-                  ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
-                  Chandigarh-Ludhiana Highway, Gharuan, Mohali, Punjab
-                  (India)</a
+                  ><i class="fa fa-globe"> </i>State Highway 12A Jhanjeri,
+                  Sahibzada Ajit Singh Nagar, Punjab 140307</a
                 >
               </div>
             </div>
@@ -414,7 +363,7 @@
               <div class="ftr_qlink">
                 <h3>Quick Links</h3>
                 <ul class="m-0 list-unstyled">
-                  <li><a href="about-cgc.html"> About CU</a></li>
+                  <li><a href="about-cgc.html"> About CGC</a></li>
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
@@ -430,7 +379,7 @@
             </div>
             <div class="col-12 col-md-4">
               <div class="ftr_map">
-                <h3>Find CU</h3>
+                <h3>Find CGC Jhanjeri</h3>
                 <img src="images/map.png" />
               </div>
             </div>
@@ -439,7 +388,7 @@
         <div class="footer_bottom">
           <div class="container-xxl">
             <div class="copyrgt">
-              Copyright © 2024 Chandigarh University Mohali
+              Copyright © 2024 Chandigarh Group of Colleges Jhanjeri
             </div>
           </div>
         </div>
