--- a/cinf/organizing-commitee.html
+++ b/cinf/organizing-commitee.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
     <title>
-      Organizing Committee- International Conference on recent Advancements in
-      Communication, Computing and Artificial Intelligence (RACCAI-2025)
+      SCMAI - 2025 Conference
     </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
