--- a/cinf/registration.html
+++ b/cinf/registration.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <title>
-      Call For Paper- 3rd International Conference on Recent Advancements in
-      Communication, Computing and Artificial Intelligence (RACCAI-2025)
-    </title>
+    <title>SCMAI - 2025 Conference</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -92,7 +89,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="call-for-paper.html"
+                  <a class="nav-link" href="call-for-paper.html"
                     >Call For Papers</a
                   >
                 </li>
@@ -130,7 +127,9 @@
                   <a class="nav-link" href="speakers.html">Speakers</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="registration.html">Registration</a>
+                  <a class="nav-link active" href="registration.html"
+                    >Registration</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a
@@ -153,65 +152,20 @@
     <div class="page-content">
       <section class="inner_banner">
         <div class="banner_title text-center">
-          <h1>ANNOUNCEMENT</h1>
+          <h1>REGISTRATION</h1>
         </div>
       </section>
-      <section class="call_for_paper py_3">
+      <section class="registeration_fee py_3">
         <div class="container-xxl">
-          <div class="row">
-            <div class="col-md-9 col-lg-8">
-              <div class="sec_title text_justify">
-                <h2 class="text_red">Call for Papers</h2>
-                <p>
-                  Faculty members/research scholars, and industry experts in the
-                  fields of engineering and technology are invited to submit
-                  original research Within the conference, research papers
-                  should present new perspectives. All participants need to
-                  register prior to attending the conference. For guidelines and
-                  further queries email at - ad1.cse@cumail.in
-                </p>
-                <!-- <div class="table-responsive">
-                        <table class="table w-100">
-                            <thead>
-                                <tr>
-                                    <th>Delegates</th>
-                                    <th>Registration Fee</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Research Scholars / Academicians  </td>
-                                    <th>7000 (INR)</th>
-                                </tr>
-                                <tr>
-                                    <td>Corporate/ Industry </td>
-                                    <th>10,000 (INR)</th>
-                                </tr>
-                                <tr>
-                                    <td>Foreign Delegates </td>
-                                    <th>$ 150</th>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div> -->
-              </div>
-            </div>
-            <div class="col-md-4 col-lg-3 ms-auto">
-              <div class="submission_link">
-                <div class="link_btn">
-                  <a href="" class="button yellow_btn">Paper Submission</a>
-                </div>
-                <div class="link_btn">
-                  <a href="" class="button yellow_btn">Author Agreement form</a>
-                </div>
-                <div class="link_btn">
-                  <a href="paper-template.html" class="button yellow_btn"
-                    >Paper Template</a
-                  >
-                </div>
-              </div>
-            </div>
+          <div
+            class="sec_title text-center"
+            data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1500"
+          >
+            <h2 class="text_red">REGISTRATION FEE</h2>
           </div>
+          <img src="/main/images/table.jpg" alt="" style="margin-left: 7%" />
         </div>
       </section>
     </div>
@@ -233,14 +187,15 @@
                   />
                 </a>
                 <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>icaaies@cgc.ac.in</a
+                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>9056710731</a
+                  ><i class="fa fa-phone"> </i>97819-26200</a
                 >
                 <a
-                  ><i class="fa fa-globe"> </i>State Highway 12A Jhanjeri,
-                  Sahibzada Ajit Singh Nagar, Punjab 140307</a
+                  ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
+                  Chandigarh-Ludhiana Highway, Gharuan, Mohali, Punjab
+                  (India)</a
                 >
               </div>
             </div>
@@ -248,7 +203,7 @@
               <div class="ftr_qlink">
                 <h3>Quick Links</h3>
                 <ul class="m-0 list-unstyled">
-                  <li><a href="about-cgc.html"> About CGC</a></li>
+                  <li><a href="about-cgc.html"> About CU</a></li>
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
@@ -264,7 +219,7 @@
             </div>
             <div class="col-12 col-md-4">
               <div class="ftr_map">
-                <h3>Find CGC Jhanjeri</h3>
+                <h3>Find CU</h3>
                 <img src="images/map.png" />
               </div>
             </div>
@@ -273,13 +228,12 @@
         <div class="footer_bottom">
           <div class="container-xxl">
             <div class="copyrgt">
-              Copyright © 2024 Chandigarh Group of Colleges Jhanjeri
+              Copyright © 2024 Chandigarh University Mohali
             </div>
           </div>
         </div>
       </div>
     </footer>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.js"></script>
