--- a/main/index.html
+++ b/main/index.html
@@ -607,7 +607,9 @@
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
-                  <li><a href="call-for-paper.html"> Call for papers</a></li>
+                  <li>
+                    <a href="call-for-paper.html"> Call for papers</a>
+                  </li>
                   <li>
                     <a href="organizing-commitee.html">Organizing Committee</a>
                   </li>
