--- a/main/index.html
+++ b/main/index.html
@@ -603,7 +603,9 @@
               <div class="ftr_qlink">
                 <h3>Quick Links</h3>
                 <ul class="m-0 list-unstyled">
-                  <li><a href="about-cgc.html"> About CU</a></li>
+                  <li>
+                    <a href="about-cgc.html"> About CU</a>
+                  </li>
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
@@ -614,8 +616,12 @@
                     <a href="organizing-commitee.html">Organizing Committee</a>
                   </li>
                   <li><a href="contact.html"> Contact</a></li>
-                  <li><a href="registration.html"> Registration</a></li>
-                  <li><a href="download.html"> Downloads</a></li>
+                  <li>
+                    <a href="registration.html"> Registration</a>
+                  </li>
+                  <li>
+                    <a href="download.html"> Downloads</a>
+                  </li>
                 </ul>
               </div>
             </div>
