--- a/main/index.html
+++ b/main/index.html
@@ -76,11 +76,6 @@
                         >About CU</a
                       >
                     </li>
-                    <li>
-                      <a class="dropdown-item" href="conference-images.html"
-                        >Glimpse of SCMAI</a
-                      >
-                    </li>
                   </ul>
                 </li>
                 <li class="nav-item">
@@ -272,7 +267,7 @@
                     >Registration</a
                   >
                   <a
-                    href="https//cmt3.research.microsoft.com/RACCAI2025"
+                    href="https://cmt3.research.microsoft.com/SCMAI2025"
                     class="button red_btn"
                     >Paper Submission</a
                   >
