--- a/main/call-for-paper.html
+++ b/main/call-for-paper.html
@@ -33,13 +33,13 @@
         <div class="nav_overlay"></div>
         <div class="container-xxl">
           <div class="navbar-brand">
-            <a href="https://www.cgc.ac.in/" class="site_logo"
+            <a href="https://www.cuchd.in/" class="site_logo"
               ><img src="images/CGC_Logo.png" alt="cgc-logo"
             /></a>
-            <a href="https://www.cgc.ac.in/" class="naac_logo"
+            <a href="https://www.cuchd.in/" class="naac_logo"
               ><img src="images/Naac+.png" alt="naac-logo"
             /></a>
-            <a href="https://www.cgc.ac.in/" class="scholar_logo"
+            <a href="https://www.cuchd.in/" class="scholar_logo"
               ><img src="images/nirf.png" alt="nirf-logo"
             /></a>
           </div>
@@ -74,11 +74,6 @@
                     <li>
                       <a class="dropdown-item" href="about-cgc.html"
                         >About CGC</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="conference-images.html"
-                        >Glimpse of RACCAI</a
                       >
                     </li>
                   </ul>
@@ -196,7 +191,11 @@
             <div class="col-md-4 col-lg-3 ms-auto">
               <div class="submission_link">
                 <div class="link_btn">
-                  <a href="" class="button yellow_btn">Paper Submission</a>
+                  <a
+                    href="https://cmt3.research.microsoft.com/SCMAI2025"
+                    class="button yellow_btn"
+                    >Paper Submission</a
+                  >
                 </div>
                 <div class="link_btn">
                   <a href="" class="button yellow_btn">Author Agreement form</a>
