--- a/main/organizing-commitee.html
+++ b/main/organizing-commitee.html
@@ -35,13 +35,13 @@
         <div class="nav_overlay"></div>
         <div class="container-xxl">
           <div class="navbar-brand">
-            <a href="https://www.cgc.ac.in/" class="site_logo"
+            <a href="https://www.cuchd.in/" class="site_logo"
               ><img src="images/CGC_Logo.png" alt="cgc-logo"
             /></a>
-            <a href="https://www.cgc.ac.in/" class="naac_logo"
+            <a href="https://www.cuchd.in/" class="naac_logo"
               ><img src="images/Naac+.png" alt="naac-logo"
             /></a>
-            <a href="https://www.cgc.ac.in/" class="scholar_logo"
+            <a href="https://www.cuchd.in/" class="scholar_logo"
               ><img src="images/nirf.png" alt="nirf-logo"
             /></a>
           </div>
@@ -78,11 +78,7 @@
                         >About CGC</a
                       >
                     </li>
-                    <li>
-                      <a class="dropdown-item" href="conference-images.html"
-                        >Glimpse of RACCAI</a
-                      >
-                    </li>
+                    
                     
                   </ul>
                 </li>
