--- a/main/index.html
+++ b/main/index.html
@@ -406,7 +406,7 @@
             <h2 class="text_red">REGISTRATION FEE</h2>
           </div>
           <img
-            src="/main/images/table.jpg"
+            src="/main/images/conference/table.jpg"
             style="align-items: center; margin-left: 7%"
             alt=""
           />
