--- a/main/registration.html
+++ b/main/registration.html
@@ -160,7 +160,7 @@
           >
             <h2 class="text_red">REGISTRATION FEE</h2>
           </div>
-          <img src="/main/images/table22.jpg" alt="" style="margin-left: 7%" />
+          <img src="images/table22.jpg" alt="" style="margin-left: 7%" />
         </div>
       </section>
     </div>
