--- a/main/paper-template.html
+++ b/main/paper-template.html
@@ -75,7 +75,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
                       <a class="dropdown-item" href="about-cgc.html"
-                        >About CGC</a
+                        >About CU</a
                       >
                     </li>
                   </ul>
@@ -235,7 +235,7 @@
               <div class="ftr_qlink">
                 <h3>Quick Links</h3>
                 <ul class="m-0 list-unstyled">
-                  <li><a href="about-cgc.html"> About CGC</a></li>
+                  <li><a href="about-cgc.html"> About CU</a></li>
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
