--- a/main/conference-theme.html
+++ b/main/conference-theme.html
@@ -74,7 +74,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
                       <a class="dropdown-item" href="about-cgc.html"
-                        >About CGC</a
+                        >About CU</a
                       >
                     </li>
                   </ul>
