--- a/main/index.html
+++ b/main/index.html
@@ -80,7 +80,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="conference-theme.html"
-                    >Book Chapters</a
+                    >Conference Themes</a
                   >
                 </li>
                 <li class="nav-item">
