--- a/main/organizing-commitee.html
+++ b/main/organizing-commitee.html
@@ -75,7 +75,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
                       <a class="dropdown-item" href="about-cgc.html"
-                        >About CGC</a
+                        >About CU</a
                       >
                     </li>
                     
